crates/codegen/language/tests/src/fail/references/invalid_version/test.stderr
error: Reference 'Baz' is not defined in versions '3.0.0..MAX'.
  --> src/fail/references/invalid_version/test.rs:19:46
   |
19 | ...                   kind = Terminal([Baz]),
   |                                        ^^^

error: Reference 'Baz' is not defined in versions '1.0.0..2.0.0'.
  --> src/fail/references/invalid_version/test.rs:24:46
   |
24 | ...                   kind = Terminal([Baz]),
   |                                        ^^^

error: Reference 'Baz' is not defined in versions '1.0.0..2.0.0 | 3.0.0..MAX'.
  --> src/fail/references/invalid_version/test.rs:29:46
   |
29 | ...                   kind = Terminal([Baz])
   |                                        ^^^
